trunk/Archive2/42/dc63470d34610c/output
main.cpp:45:5: error: invalid use of template-name 'hdl_tree_node' without an argument list
     hdl_tree_node *p_;
     ^
